--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "ext-json": "*",
         "oat-sa/lib-lti1p3-core": "dev-master",
         "symfony/framework-bundle": "^4.2 || ^5.0",
-        "symfony/yaml": "^4.2 || ^5.0"
+        "symfony/yaml": "^4.2 || ^5.0",
+        "symfony/psr-http-message-bridge": "^2.0",
+        "nyholm/psr7": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
