Fixed DI overrides

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -27,3 +27,9 @@ services:
         arguments: ['@OAT\Library\Lti1p3Core\Security\Jwks\Exporter\JwksExporter']
         tags: ['controller.service_arguments']
 
+    OAT\Library\Lti1p3Core\Registration\RegistrationRepositoryInterface:
+        alias: OAT\Bundle\Lti1p3Bundle\Registration\RegistrationRepository
+
+    OAT\Library\Lti1p3Core\Security\Key\KeyChainRepositoryInterface:
+        alias: OAT\Library\Lti1p3Core\Security\Key\KeyChainRepository
+
