--- a/Tests/Resources/Kernel/config/lti1p3.yaml
+++ b/Tests/Resources/Kernel/config/lti1p3.yaml
@@ -15,7 +15,7 @@ lti1p3:
             name: "Test platform"
             audience: "http://platform.com"
             oidc_authentication_url: "http://platform.com/oidc-auth"
-            oauth2_access_token_url: "http://platform.com/access-token"
+            oauth2_access_token_url: "http://platform.com/auth/token"
     tools:
         testTool:
             name: "Test tool"
