--- a/Resources/config/routing/message/tool.yaml
+++ b/Resources/config/routing/message/tool.yaml
@@ -1,5 +1,5 @@
 lti1p3_message_oidc_login_initiation:
-    path: '/oidc/login-initiation'
+    path: '/lti1p3/oidc/login-initiation'
     methods: [GET, POST]
     controller: OAT\Bundle\Lti1p3Bundle\Action\Tool\Message\OidcLoginInitiationAction
 
