--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "LTI1p3 Symfony Bundle",
     "keywords": ["symfony", "LTI1p3"],
     "type": "symfony-bundle",
-    "license": "GPL-2.0-only",
+    "license": "LGPL-2.1",
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
