--- a/Resources/config/routing/message/tool.yaml
+++ b/Resources/config/routing/message/tool.yaml
@@ -1,5 +1,5 @@
-lti1p3_message_oidc_login_initiation:
-    path: '/lti1p3/oidc/login-initiation'
+lti1p3_message_oidc_initiation:
+    path: '/lti1p3/oidc/initiation'
     methods: [GET, POST]
     controller: OAT\Bundle\Lti1p3Bundle\Action\Tool\Message\OidcInitiationAction
 
