--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
     "name": "oat-sa/bundle-lti1p3",
-    "description": "LTI1p3 Symfony Bundle",
+    "description": "OAT LTI 1.3 Symfony Bundle",
     "keywords": ["symfony", "LTI1p3"],
     "type": "symfony-bundle",
     "license": "LGPL-2.1",
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.2.0",
         "ext-json": "*",
-        "nyholm/psr7": "^1.2",
-        "oat-sa/lib-lti1p3-core": "dev-feature/deep-link",
-        "symfony/framework-bundle": "^4.2 || ^5.1",
-        "symfony/security-bundle": "^4.2 || ^5.1",
-        "symfony/yaml": "^4.2 || ^5.1",
+        "oat-sa/lib-lti1p3-core": "^3.0",
+        "symfony/framework-bundle": "^4.4 || ^5.1",
+        "symfony/security-bundle": "^4.4 || ^5.1",
+        "symfony/yaml": "^4.4 || ^5.1",
         "symfony/psr-http-message-bridge": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "8.5.8",
+        "php-coveralls/php-coveralls": "^2.3",
         "symfony/browser-kit": "^5.1"
     },
     "autoload": {
-        "psr-4": { "OAT\\Bundle\\Lti1p3Bundle\\": "" },
+        "psr-4": {
+            "OAT\\Bundle\\Lti1p3Bundle\\": "",
+            "OAT\\Library\\Lti1p3Core\\Tests\\": "vendor/oat-sa/lib-lti1p3-core/tests/"
+        },
         "exclude-from-classmap": [
             "/Tests/"
         ]
