* Added possibility to configure handled scopes for service access token generator * Added possibility to configure allowed scopes per service firewall * Upgraded for oat-sa/lib-lti1p3-core version 3.2.0 * Updated documentation

--- a/Tests/Resources/Kernel/config/security.yaml
+++ b/Tests/Resources/Kernel/config/security.yaml
@@ -14,7 +14,7 @@ security:
         service_secured:
             pattern:   ^/test/service
             stateless: true
-            lti1p3_service: true
+            lti1p3_service: { scopes: ['allowed-scope'] }
         main:
             anonymous: lazy
             provider: users_in_memory
