--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 sudo: false
 language: php
 
-php:
-  - 7.2
-  - 7.3
-  - 7.4
+jobs:
+  include:
+    - php: 7.2
+      env: COMPOSER_FLAGS=--prefer-lowest --prefer-stable
+    - php: 7.3
+    - php: 7.4
 
 before_script:
-  - composer self-update && composer install --no-interaction
+  - composer self-update && composer update --no-interaction $COMPOSER_FLAGS
 
 script:
   - mkdir -p build/logs
